; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_flowring.c_brcmf_flowring_ifidx_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_flowring.c_brcmf_flowring_ifidx_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_flowring = type { %struct.TYPE_2__*, %struct.brcmf_flowring_ring** }
%struct.TYPE_2__ = type { i32 }
%struct.brcmf_flowring_ring = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @brcmf_flowring_ifidx_get(%struct.brcmf_flowring* %0, i64 %1) #0 {
  %3 = alloca %struct.brcmf_flowring*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.brcmf_flowring_ring*, align 8
  %6 = alloca i64, align 8
  store %struct.brcmf_flowring* %0, %struct.brcmf_flowring** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.brcmf_flowring*, %struct.brcmf_flowring** %3, align 8
  %8 = getelementptr inbounds %struct.brcmf_flowring, %struct.brcmf_flowring* %7, i32 0, i32 1
  %9 = load %struct.brcmf_flowring_ring**, %struct.brcmf_flowring_ring*** %8, align 8
  %10 = load i64, i64* %4, align 8
  %11 = getelementptr inbounds %struct.brcmf_flowring_ring*, %struct.brcmf_flowring_ring** %9, i64 %10
  %12 = load %struct.brcmf_flowring_ring*, %struct.brcmf_flowring_ring** %11, align 8
  store %struct.brcmf_flowring_ring* %12, %struct.brcmf_flowring_ring** %5, align 8
  %13 = load %struct.brcmf_flowring_ring*, %struct.brcmf_flowring_ring** %5, align 8
  %14 = getelementptr inbounds %struct.brcmf_flowring_ring, %struct.brcmf_flowring_ring* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %6, align 8
  %16 = load %struct.brcmf_flowring*, %struct.brcmf_flowring** %3, align 8
  %17 = getelementptr inbounds %struct.brcmf_flowring, %struct.brcmf_flowring* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = load i64, i64* %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
